<resources>
    <string name="app_name">Archeological Fieldwork</string>
    <string name="change_site_image">Change Image</string>
    <string name="select_site_image">Select Image</string>
    <string name="menu_addSite">Add Site</string>
    <string name="hint_siteName">Name of Site</string>
    <string name="hint_siteDescription">Description of Site</string>
    <string name="button_addImage">Add Image</string>
    <string name="menu_deleteSite">Delete</string>
    <string name="menu_saveSite">Save</string>
    <string name="enter_site_name">Please Enter a Site name</string>
    <string name="menu_cancel">Cancel</string>
    <string name="hint_siteNotes">Notes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_email">Not a valid e-mail</string>
    <string name="invalid_email__in_use">E-Mail already in use</string>
    <string name="invalid_password__wrong_password">Wrong password</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="signup_failed">Signup failed</string>
    <string name="menu_logout">Logout</string>
    <string name="settings_apply">Apply</string>
    <string name="settingsAccountHeader">Account</string>
    <string name="settings_statistics_header">Statistics</string>
    <string name="settings_total_sites">Total #Sites:</string>
    <string name="settings_sites_visited">Sites visited:</string>
    <string name="menu_settings">Settings</string>
    <string name="account_username_taken">Username already taken</string>
    <string name="account_data_changed">Account data changed</string>
    <string name="account_change_error">Error</string>
    <string name="site_checkbox_visited">Visited</string>
    <string name="title_activity_maps">Map</string>
    <string name="set_location">Set Location</string>
    <string name="site_title_placeholder">Title</string>
    <string name="site_description_placeholder">Description</string>
    <string name="site_image_placeholder">Image</string>
    <string name="menu_map">Map</string>
    <string name="menu_favs">Favorites</string>
    <string name="menu_mark_fav">Mark Favorite</string>
    <string name="rateButton">Rate</string>
    <string name="offline_version">Offline version</string>
    <string name="share">Share</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_text_hint">Search…</string>
    <string name="new_password">New Password</string>
</resources>