<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="nav_view">


    <item
        android:id="@+id/item_favs"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/menu_favs"/>

    <item
        android:id="@+id/siteMapView"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_map" />

    <group>
        <item
            android:id="@+id/settingsView"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings"/>

        <item
            android:id="@+id/item_logout"
            android:icon="@mipmap/logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>